--- a/config/templates/template_example.jinja
+++ b/config/templates/template_example.jinja
@@ -1,10 +1,10 @@
-*{{ vacancy.name }}* {% if vacancy.company %}в {{ vacancy.company.name }}{% endif %}{% if vacancy.salary_from != None or vacancy.salary_to != None or vacancy.location or vacancy.work_format or vacancy.experience or vacancy.level  %}
+{{b}}{{ vacancy.name|truncate(100) }}{{b}} {% if vacancy.company %}в {{ vacancy.company.name }}{% endif %}{% if vacancy.salary_from != None or vacancy.salary_to != None or vacancy.location or vacancy.work_format or vacancy.experience or vacancy.level  %}
 {% endif %}{% if vacancy.salary_from != None or vacancy.salary_to != None %}
 ЗП: {% if vacancy.salary_from != None %}от {{ vacancy.salary_from }}{% endif %} {% if vacancy.salary_to != None %}до {{ vacancy.salary_to }}{% endif %}{% endif %}{% if vacancy.location %}
 Город: {{ vacancy.location }}{% endif %}{% if vacancy.work_format %}
-Формат: *{{ vacancy.work_format }}*{% endif %}{% if vacancy.experience != None %}
-Опыт: *{{ vacancy.experience }}*{% endif %} {% if vacancy.level %}{{ vacancy.level }}{% endif %}
+Формат: {{b}}{{ vacancy.work_format }}{{b}}{% endif %}{% if vacancy.experience != None %}
+Опыт: {{b}}{{ vacancy.experience }}{{b}}{% endif %} {% if vacancy.level %}{{ vacancy.level }}{% endif %}
 {% if vacancy.description %}
-{{ vacancy.description }}
+{{ vacancy.description|truncate(500) }}
 {% endif %}
 Откликнуться: {{ vacancy.link }}
